# locations

./: .gitignore  CODEOWNERS
.github/workflows/: build.yml  deploy.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  main.rs
frontend/: .env  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: api.ts
frontend/src/auth/: auth.ts
frontend/src/components/: Places.vue  PlacesMain.vue
helm/places-backend/: Chart.yaml  values.yaml
helm/places-backend/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secretproviderclass.yaml  service.yaml
helm/places-frontend/: Chart.yaml
helm/places-frontend/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
