[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["cors"]}
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7.2", features = ["with-uuid-1"] }
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
log = "0.4.21"
env_logger = "0.11.3"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.2", features = ["json"] }
rust_decimal = { version = "1.35.0", features = ["db-tokio-postgres"]}
